--- a/ambient.html
+++ b/ambient.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="de">
+<!DOCTYPE >
+< lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +19,10 @@
   <div class="container">
     <div class="sidebar-left">
       <nav>
-        <p><a href="index.html">Home</a></p>
-        <p><a href="songs.html">Songs</a></p>
-        <p><a href="ambient.html">Ambient</a></p>
-        <p><a href="about.html">Über mich</a></p>
+        <p><a href="/">Home</a></p>
+        <p><a href="songs">Songs</a></p>
+        <p><a href="ambient">Ambient</a></p>
+        <p><a href="about">Über mich</a></p>
       </nav>
     </div>
 
@@ -118,4 +118,4 @@
     </div>
   </footer>
 </body>
-</html>
+</>
