--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <div class="container">
     <div class="sidebar-left">
       <nav>
-        <p><a href="index.html">Home</a></p>
-        <p><a href="songs.html">Songs</a></p>
-        <p><a href="ambient.html">Ambient</a></p>
-        <p><a href="about.html">About</a></p>
+        <p><a href="/">Home</a></p>
+        <p><a href="songs">Songs</a></p>
+        <p><a href="ambient">Ambient</a></p>
+        <p><a href="about">About</a></p>
       </nav>
     </div>
     <div class="main-content">
