--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Über den Komponisten und Musiker Serg Osovskyi</h1>
         <p>Willkommen auf der Website, die dem kreativen Weg des Komponisten und Musikers Serg Osovskyi gewidmet ist. Derzeit komponiert Serg Melodien und Arrangements mit Hilfe moderner Plugins und Samples in der Musiksoftware Logic Pro X. Dabei kombiniert er sowohl manuelle Arrangements als auch Techniken mit künstlicher Intelligenz, um einzigartige Werke zu schaffen.</p>
 
-        <p>Schon in jungen Jahren begann Serg Osovskyi mit dem Musikstudium. Er lernte Gitarre und Klavier in einer Musikklasse, trat bei lokalen Wettbewerben auf und setzte sein musikalisches Hobby auch während des Studiums fort. Obwohl er eine technische Laufbahn als Ingenieur der Elektronik wählte, fand er Wege, seine technischen Fähigkeiten in der Musik einzusetzen.</p>
+        <p>Schon in jungen Jahren begann Serg Osovskyi mit dem Musikstudium. Er lernte Gitarre und Klavier in einer Musikklasse, trat bei lokalen Wettbewerben auf und setzte sein musikalisches Hobby auch während des Studiums fort. Obwohl er eine technische Laufbahn als Ingenieur der Elektronik und IT wählte, fand er Wege, seine technischen Fähigkeiten in der Musik einzusetzen.</p>
 
         <p>Seine musikalischen Stile umfassen Pop- und Rockmusik, Ambient sowie den Liedgesang mit weiblichem Gesang. Die Arrangements verbinden moderne und klassische Elemente, sodass jeder Zuhörer etwas Interessantes finden kann. Jedes Musikstück wird durch ein passendes Video ergänzt. Diese Videos, die oft romantische und emotionale Szenen zeigen, verleihen der Musik eine zusätzliche Tiefe und berühren die Zuschauer.</p>
       </div>
