--- a/ambient.html
+++ b/ambient.html
@@ -1,5 +1,5 @@
 <!DOCTYPE >
-< lang="de">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -118,4 +118,4 @@
     </div>
   </footer>
 </body>
-</>
+</html>
