renamed text message on the page to be "Сколько дней прошло или осталось до выбранной даты"

--- a/days-app.html
+++ b/days-app.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <h1>Сколько дней прошло с даты?</h1>
+  <h1>Сколько дней прошло или осталось до выбранной даты?</h1>
 
   <form id="dateForm">
     <input id="date" name="date" type="date" required />
